Language: Fix untranslated main menu items

--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -942,5 +942,6 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u00daltima modificaci\u00f3n"
+    "Updated": "\u00daltima modificaci\u00f3n",
+    "Sessions catalogue": "Sessions catalogue"
 }
