--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -1062,5 +1062,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u00daltima modificaci\u00f3"
+    "Updated": "\u00daltima modificaci\u00f3",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videoconfer\u00e8ncia"
 }
