--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1120,5 +1120,8 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u00daltima modificaci\u00f3n"
+    "Updated": "\u00daltima modificaci\u00f3n",
+    "Explore more courses": "Explorar m\u00e1s cursos",
+    "Sessions catalogue": "Cat\u00e1logo de sesiones",
+    "Videoconference": "Videoconferencia"
 }
