--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -903,5 +903,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Muokkaus p\u00e4iv\u00e4"
+    "Updated": "Muokkaus p\u00e4iv\u00e4",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videoneuvottelu"
 }
