--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -1099,5 +1099,8 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u05e2\u05d5\u05d3\u05db\u05df"
+    "Updated": "\u05e2\u05d5\u05d3\u05db\u05df",
+    "Explore more courses": "\u05d7\u05e7\u05d5\u05e8 \u05e7\u05d5\u05e8\u05e1\u05d9\u05dd \u05e0\u05d5\u05e1\u05e4\u05d9\u05dd",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "\u05d5\u05e2\u05d9\u05d3\u05ea \u05d5\u05d9\u05d3\u05d0\u05d5"
 }
