--- a/assets/locales/nn_NO.json
+++ b/assets/locales/nn_NO.json
@@ -718,5 +718,6 @@
     "Go to branding (logos)": "Go to branding (logos)",
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
-    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback."
+    "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
+    "Sessions catalogue": "Sessions catalogue"
 }
