--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -1039,5 +1039,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Actualizado"
+    "Updated": "Actualizado",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videoconfer\u00eancia"
 }
