--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -1042,5 +1042,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Ultima modificare"
+    "Updated": "Ultima modificare",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videoconferinta"
 }
