--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -1107,5 +1107,8 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Datum zadnje spremembe"
+    "Updated": "Datum zadnje spremembe",
+    "Explore more courses": "Razi\u0161\u010di ve\u010d te\u010dajev",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videokonferenca"
 }
