--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -1108,5 +1108,8 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u062a\u0645 \u0627\u0644\u062a\u062d\u062f\u064a\u062b"
+    "Updated": "\u062a\u0645 \u0627\u0644\u062a\u062d\u062f\u064a\u062b",
+    "Explore more courses": "\u0627\u0633\u062a\u0643\u0634\u0627\u0641 \u0645\u0642\u0631\u0631\u0627\u062a \u0627\u0643\u062b\u0631",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "\u0645\u0624\u062a\u0645\u0631\u0627\u062a \u0627\u0644\u0641\u064a\u062f\u064a\u0648"
 }
