--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -955,5 +955,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u0414\u0430\u0442\u0430 \u043d\u0430 \u043f\u0440\u043e\u043c\u044f\u043d\u0430"
+    "Updated": "\u0414\u0430\u0442\u0430 \u043d\u0430 \u043f\u0440\u043e\u043c\u044f\u043d\u0430",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "\u0412\u0438\u0434\u0435\u043e-\u043a\u043e\u043d\u0444\u0435\u0440\u0435\u043d\u0446\u0438\u044f"
 }
