--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1121,5 +1121,8 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Updated"
+    "Updated": "Updated",
+    "Explore more courses": "Explore more courses",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videoconference"
 }
