--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -1024,5 +1024,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Azken aldaketa"
+    "Updated": "Azken aldaketa",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Bideokonferentzia"
 }
