--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -962,5 +962,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u0628\u0631\u0648\u0632 \u0631\u0633\u0627\u0646\u06cc \u0634\u062f"
+    "Updated": "\u0628\u0631\u0648\u0632 \u0631\u0633\u0627\u0646\u06cc \u0634\u062f",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "\u0648\u06cc\u062f\u06cc\u0648 \u06a9\u0646\u0641\u0631\u0627\u0646\u0633"
 }
