--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -1120,5 +1120,8 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Mise \u00e0 jour enregistr\u00e9e"
+    "Updated": "Mise \u00e0 jour enregistr\u00e9e",
+    "Explore more courses": "Explorer plus de cours",
+    "Sessions catalogue": "Catalogue de sessions",
+    "Videoconference": "Vid\u00e9oconf\u00e9rence"
 }
