--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -896,5 +896,6 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "M\u00f3dos\u00edtva"
+    "Updated": "M\u00f3dos\u00edtva",
+    "Sessions catalogue": "Sessions catalogue"
 }
