--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -1074,5 +1074,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Aggiorna la data"
+    "Updated": "Aggiorna la data",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videoconferenza"
 }
