--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -1004,5 +1004,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "P\u0113d\u0113j\u0101s izmai\u0146as"
+    "Updated": "P\u0113d\u0113j\u0101s izmai\u0146as",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videokonference"
 }
