--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -1120,5 +1120,8 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "ge\u00fcpdatete"
+    "Updated": "ge\u00fcpdatete",
+    "Explore more courses": "Verken meer cursussen",
+    "Sessions catalogue": "Catalogus van sessies",
+    "Videoconference": "Videoconferentie"
 }
