--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -1021,5 +1021,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Zaktualizowana"
+    "Updated": "Zaktualizowana",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Wideokonferencja"
 }
