--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -915,5 +915,6 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "Qepa t'jrapachisqan"
+    "Updated": "Qepa t'jrapachisqan",
+    "Sessions catalogue": "Sessions catalogue"
 }
