--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -1060,5 +1060,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "D\u00e1tum aktualiz\u00e1cie"
+    "Updated": "D\u00e1tum aktualiz\u00e1cie",
+    "Sessions catalogue": "Sessions catalogue",
+    "Videoconference": "Videokonferencia"
 }
