--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -825,5 +825,6 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "A\u017eurirano"
+    "Updated": "A\u017eurirano",
+    "Sessions catalogue": "Sessions catalogue"
 }
