--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -852,5 +852,6 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "G\u00fcncellendi"
+    "Updated": "G\u00fcncellendi",
+    "Sessions catalogue": "Sessions catalogue"
 }
