--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -883,5 +883,6 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Updated": "\u66f4\u65b0"
+    "Updated": "\u66f4\u65b0",
+    "Sessions catalogue": "Sessions catalogue"
 }
