Language: Minor add translation for date of birth - refs BT#22823

--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -30442,3 +30442,6 @@ msgstr "Terminé le"
 
 msgid "Incomplete courses"
 msgstr "Cours non terminés"
+
+msgid "Date of birth"
+msgstr "Date de naissance"
