Language: add missing translation specific to relation - refs BT#22940

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -30020,3 +30020,6 @@ msgstr "Auszeichnung"
 
 msgid "Date of birth"
 msgstr "Geburtsdatum"
+
+msgid "Are you sure to delete the friendship?"
+msgstr "Möchten Sie die Freundschaft wirklich löschen?"
