--- a/translations/messages.es_MX.po
+++ b/translations/messages.es_MX.po
@@ -4359,8 +4359,8 @@ msgstr "Servidor de Pruebas"
 msgid "Who's Online"
 msgstr "Quién está en línea"
 
-msgid "as platformlanguage"
-msgstr "como idioma de la plataforma"
+msgid "%s as platform language"
+msgstr "%s como idioma de la plataforma"
 
 msgid "Display the number of persons that are online?"
 msgstr "¿Mostrar el numero de personas en línea?"
