--- a/translations/messages.fi.po
+++ b/translations/messages.fi.po
@@ -4361,7 +4361,7 @@ msgstr "Testipalvelin"
 msgid "Who's Online"
 msgstr "Kuka on online"
 
-msgid "as platformlanguage"
+msgid "%s as platform language"
 msgstr ""
 
 msgid "Display the number of persons that are online?"
