--- a/translations/messages.ja.po
+++ b/translations/messages.ja.po
@@ -4422,7 +4422,7 @@ msgstr "テスト サーバー"
 msgid "Who's Online"
 msgstr "オンライン ユーザー"
 
-msgid "as platformlanguage"
+msgid "%s as platform language"
 msgstr ""
 
 msgid "Display the number of persons that are online?"
