--- a/translations/messages.tl.po
+++ b/translations/messages.tl.po
@@ -4352,7 +4352,7 @@ msgstr "Server sa Pagsusulit"
 msgid "Who's Online"
 msgstr "Sino ang Online"
 
-msgid "as platformlanguage"
+msgid "%s as platform language"
 msgstr ""
 
 msgid "Display the number of persons that are online?"
