--- a/translations/messages.da.po
+++ b/translations/messages.da.po
@@ -4359,8 +4359,8 @@ msgstr "Test server"
 msgid "Who's Online"
 msgstr "Hvem er online"
 
-msgid "as platformlanguage"
-msgstr "som platformsprog"
+msgid "%s as platform language"
+msgstr "%s som platformsprog"
 
 msgid "Display the number of persons that are online?"
 msgstr "Vis antal online personer?"
