--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -4359,8 +4359,8 @@ msgstr "Test Server"
 msgid "Who's Online"
 msgstr "Who's Online"
 
-msgid "as platformlanguage"
-msgstr "as platformlanguage"
+msgid "%s as platform language"
+msgstr "%s as platform language"
 
 msgid "Display the number of persons that are online?"
 msgstr "Display the number of persons that are online?"
