--- a/translations/messages.eo.po
+++ b/translations/messages.eo.po
@@ -4359,8 +4359,8 @@ msgstr "Testa servilo"
 msgid "Who's Online"
 msgstr "Konektitaj uzuloj"
 
-msgid "as platformlanguage"
-msgstr "kiel platforma lingvo"
+msgid "%s as platform language"
+msgstr "%s kiel platforma lingvo"
 
 msgid "Display the number of persons that are online?"
 msgstr "Montru la nombron da konektitaj uzuloj"
