--- a/translations/messages.ms.po
+++ b/translations/messages.ms.po
@@ -4359,7 +4359,7 @@ msgstr ""
 msgid "Who's Online"
 msgstr ""
 
-msgid "as platformlanguage"
+msgid "%s as platform language"
 msgstr ""
 
 msgid "Display the number of persons that are online?"
