--- a/translations/messages.sr.po
+++ b/translations/messages.sr.po
@@ -4360,8 +4360,8 @@ msgstr "Test server"
 msgid "Who's Online"
 msgstr "Ko je Online"
 
-msgid "as platformlanguage"
-msgstr "kao jezik platforme"
+msgid "%s as platform language"
+msgstr "%s kao jezik platforme"
 
 msgid "Display the number of persons that are online?"
 msgstr "Prikaži broj korisnika koji su online"
