--- a/translations/messages.sv.po
+++ b/translations/messages.sv.po
@@ -4359,8 +4359,8 @@ msgstr "Testserver"
 msgid "Who's Online"
 msgstr "Vem är inloggad?"
 
-msgid "as platformlanguage"
-msgstr "som plattformsspråk"
+msgid "%s as platform language"
+msgstr "%s som plattformsspråk"
 
 msgid "Display the number of persons that are online?"
 msgstr "Visa antalet användare som är inloggade?"
