--- a/translations/messages.th.po
+++ b/translations/messages.th.po
@@ -4359,8 +4359,8 @@ msgstr "เครื่องแม่ข่ายบริการจำลอ
 msgid "Who's Online"
 msgstr "ผู้ที่กำลังร่วมใช้งาน"
 
-msgid "as platformlanguage"
-msgstr "เป็นภาษาของระบบ"
+msgid "%s as platform language"
+msgstr "%s เป็นภาษาของระบบ"
 
 msgid "Display the number of persons that are online?"
 msgstr "ให้แสดงจำนวนผู้ที่กำลังใช้งานระบบ"
