--- a/translations/messages.ast_ES.po
+++ b/translations/messages.ast_ES.po
@@ -8275,7 +8275,7 @@ msgid "Add this question to the test"
 msgstr "Amestar entruga"
 
 msgid "Display"
-msgstr "Presentación de les entrugues"
+msgstr "Presentación"
 
 msgid "Multiple choice"
 msgstr "Rempuesta única"
