--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -8288,7 +8288,7 @@ msgid "Add this question to the test"
 msgstr "Añadir pregunta"
 
 msgid "Display"
-msgstr "Presentación de las preguntas"
+msgstr "Presentación"
 
 msgid "Multiple choice"
 msgstr "Respuesta única"
