--- a/translations/messages.qu_PE.po
+++ b/translations/messages.qu_PE.po
@@ -8275,7 +8275,7 @@ msgid "Add this question to the test"
 msgstr "Añadir pregunta"
 
 msgid "Display"
-msgstr "Presentación de las preguntas"
+msgstr "Presentación"
 
 msgid "Multiple choice"
 msgstr "Opción múltiple"
